c4prj1_deck/grade.txt
Grading at Tue Jul 30 23:54:47 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘add_card_to’:
deck.c:55:10: error: ‘deck’ redeclared as different kind of symbol
  deck_t* deck = malloc(sizeof(*deck));
          ^
deck.c:53:26: note: previous definition of ‘deck’ was here
 void add_card_to(deck_t* deck, card_t c) {
                          ^
Compilation of deck.c failed

Overall Grade: F
